[HandWritten] .note: fix note icon central align ('top' value) on max-width: on-medium

--- a/_sass/moving/_layout.scss
+++ b/_sass/moving/_layout.scss
@@ -248,11 +248,16 @@ $site-header-height: 3rem !default;
   padding-right: 1rem
 }
 .note:before {
-  height: 1rem;
-  width: 1rem;
+  height: $small-font-size;
+  width: $small-font-size;
+  top: ($small-font-size * $small-line-height - $small-font-size) / 2;
+  @media screen and (min-width: $on-medium) {
+    height: $base-font-size;
+    width: $base-font-size;
+    top: ($base-font-size * $base-line-height - $base-font-size) / 2;
+  }
   content: "";
   float: left;
-  top: 0.25rem;
   position: relative;
   margin-right: 0.5rem
 }
